welcome.lessons.welcome.methods.picture.PictureMono3.scala.error
PictureMono3:2: error: Missing closing brace `}' assumed here
override def run() {
^PictureMono3:2: error: expected start of definition
override def run() {
         ^